修改：去除AESUtil中对sun包的直接引用